


SET(LOGGER_SRC logger.cc)
SET(LOGGER_INC logger.hpp)

#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

ADD_LIBRARY(logger SHARED ${LOGGER_SRC} ${LOGGER_INC})
ADD_LIBRARY(logger_static STATIC  ${LOGGER_SRC} ${LOGGER_INC})
set_target_properties(logger_static PROPERTIES OUTPUT_NAME "logger")
